--- a/WpfAsistente/App.config
+++ b/WpfAsistente/App.config
@@ -94,15 +94,21 @@
 <add key="botonTamanoHeight" value="3.38"/> <!--Tamano del boton volver (valor respecto al alto)'-->
 <add key="botonTamanoWidth" value="12"/> <!--Tamano del boton volver (valor respecto al ancho)'-->
 <!--Configuracion de la Pantalla de Selfies FIN-->
+  <add key="nombrepcLAN" value="GALADRIEL"/>
+  <!--Acceso para compartir la selfie-->
+  <add key="rutaLocal" value="C:\Users\zelda_b48pnza\Documents\rutalocal"/>
 
-<!--Acceso para compartir la selfie-->
-<add key="rutaLocal" value="C:\Users\HL\Desktop"/>
-<add key="nombrepcLAN" value="GALADRIEL"/>
-<add key="fullrutaLAN" value="\\GALADRIEL\FotosAsistente\"/>
+  <!--URL del ftp'-->
+<add key="fullrutaLAN" value="ftp://centromultimedia.com.ar/selfies/"/>
+  <!--usuario del ftp'-->
+  <add key="usuarioLAN" value="totem@centromultimedia.com.ar"/>
+  <!--password del ftp'-->
+  <add key="passwordLAN" value="totemHECTOR1!"/>
+  
+  
 <add key="dominioLAN" value="10.18.30.89"/>
-<add key="usuarioLAN" value="AK0"/>
-<add key="passwordLAN" value="light"/>
-<add key="rutaFTP" value="http://totembiblioteca.iae.edu.ar"/>
+
+<add key="rutaFTP" value="ftp://centromultimedia.com.ar/selfies/"/>
 <!--Acceso para compartir la selfie FIN-->
 
 <!--Nombre de la imagen marca de agua q esta en resources-->
@@ -114,6 +120,8 @@
 
     <!--Tiempo de reaccion por inactividad(minutos)-->
   <add key="inactimer" value="3"/>
+
+  <add key="startdefaultbuttons" value="true"/>
 
 
 </appSettings>
