--- a/MigrationBackup/57713cbc/WpfAsistente/packages.config
+++ b/MigrationBackup/57713cbc/WpfAsistente/packages.config
@@ -5,6 +5,8 @@
   <package id="Appccelerate.StateMachine" version="2.12.0" targetFramework="net45" />
   <package id="Ix-Main" version="1.2.5" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net45" />
+  <package id="Microsoft.Toolkit.Wpf.UI.Controls.WebView" version="6.1.0" targetFramework="net472" />
+  <package id="Microsoft.Windows.SDK.Contracts" version="10.0.18362.2005" targetFramework="net472" />
   <package id="QrCode.Net" version="0.4.0.0" targetFramework="net45" />
   <package id="reactiveui-events" version="7.2.0" targetFramework="net45" />
   <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net45" />
@@ -14,6 +16,8 @@
   <package id="Rx-PlatformServices" version="2.3.0-beta2" targetFramework="net45" />
   <package id="Rx-XAML" version="2.3.0-beta2" targetFramework="net45" />
   <package id="Splat" version="2.0.0" targetFramework="net45" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net472" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net45" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="net45" />
 </packages>
