--- a/WpfAsistente/App.config
+++ b/WpfAsistente/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -129,11 +129,15 @@
   <add key="volverporcalto" value="3.18"/>
   <add key="volverporcancho" value="6"/>
 
+	<!--backbutton fullvideo-->
+	<add key="volverporcaltofullvideo" value="3"/>
+	<add key="volverporcanchofullvideo" value="6"/>
+
   <!--to Add new -->
-  <add key="browserheight" value="70" />
-  <add key="volverMenuFromBotton" value="-2" />
-  <add key="volverMenuFromLeft" value="3" />
-  <add key="shortMenu" value="18" />
+  <add key="browserheight" value="70"/>
+  <add key="volverMenuFromBotton" value="-2"/>
+  <add key="volverMenuFromLeft" value="3"/>
+  <add key="shortMenu" value="18"/>
 
 
 
