--- a/WpfAsistente/packages.config
+++ b/WpfAsistente/packages.config
@@ -12,18 +12,18 @@
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net45" />
   <package id="QrCode.Net" version="0.4.0.0" targetFramework="net45" />
   <package id="reactiveui-events" version="7.2.0" targetFramework="net45" />
-  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net45" />
+  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net45" requireReinstallation="true" />
+  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net45" requireReinstallation="true" />
+  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net45" requireReinstallation="true" />
   <package id="Rx-Main" version="2.3.0-beta2" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.3.0-beta2" targetFramework="net45" />
-  <package id="Rx-XAML" version="2.3.0-beta2" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.3.0-beta2" targetFramework="net45" requireReinstallation="true" />
+  <package id="Rx-XAML" version="2.3.0-beta2" targetFramework="net45" requireReinstallation="true" />
   <package id="Splat" version="2.0.0" targetFramework="net45" />
   <package id="System.Reactive" version="3.0.0" targetFramework="net45" />
-  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net45" />
-  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net45" />
-  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net45" />
   <package id="WPFTabTip" version="1.2.2" targetFramework="net45" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net45" />
