cambios en la universidad

--- a/WpfAsistente/App.config
+++ b/WpfAsistente/App.config
@@ -91,7 +91,7 @@
   
 <add key="botonVolverHORIZONTAL" value="30"/> <!--Posicion en la HORIZONTAL del Boton Volver'-->
 <add key="botonVolverVERTICAL" value="5.5"/> <!--Posicion en la VERTICAL del Boton Volver'-->
-<add key="botonTamanoHeight" value="3.38"/> <!--Tamano del boton volver (valor respecto al alto)'-->
+<add key="botonTamanoHeight" value="3.38"/> <!--Tamano del boton volver (valor 60respecto al alto)'-->
 <add key="botonTamanoWidth" value="12"/> <!--Tamano del boton volver (valor respecto al ancho)'-->
 <!--Configuracion de la Pantalla de Selfies FIN-->
   <add key="nombrepcLAN" value="GALADRIEL"/>
