--- a/WpfAsistente/App.config
+++ b/WpfAsistente/App.config
@@ -123,7 +123,7 @@
 
   <add key="startdefaultbuttons" value="false"/>
   <!--Zocalo-->
-  <add key="zocaloheight" value="25"/>
+ 
   
   <!--backbutton-->
   <add key="volverporcalto" value="3.18"/>
@@ -133,14 +133,17 @@
 	<add key="volverporcaltofullvideo" value="3"/>
 	<add key="volverporcanchofullvideo" value="6"/>
 
-  <!--to Add new -->
-  <add key="browserheight" value="70"/>
+
+  <add key="browserheight" value="80"/>
+  <add key="zocaloheight" value="15"/>
   <add key="volverMenuFromBotton" value="-2"/>
   <add key="volverMenuFromLeft" value="3"/>
   <add key="shortMenu" value="18"/>
 
 
-
+	<!--to footer sizes -->
+	<add key="footersizebtnwith" value="100"/>
+	<add key="footersizebtnheight" value="100"/>
 
 </appSettings>
 </configuration>
